# sssd-mc

./: .aiignore  .clippy.toml  .editorconfig  .gitignore  .licensesnip  .nextest.toml  .prettierrc  .rustfmt.toml  .typos.toml  CLAUDE.md  Cargo.toml  README.md  TODO.md  justfile  rust-toolchain.toml
docs/: analyze_this_project,_what_problems_can.md  cargo-license.txt
docs/user-stories/: 001-test-cache-generator.md  002-non-utf8-strings.md  003-initgroups-sid-fixtures.md  004-negative-tests.md  005-parsed-entry-types.md  006-hash-chain-same-bucket.md
scripts/: ensure-builder-image.py
src/: analysis.rs  display.rs  entries.rs  errors.rs  lib.rs  main.rs  murmurhash3.rs  types.rs
src/parsers/: cache.rs  mod.rs
tests/: cli_verify.rs  gen_cache.c  murmurhash3_crossval.rs  negative.rs  parse_fixtures.rs  verify_collision.rs
tests/fixtures/head/: collision.cache  collision_meta.txt  group.cache  hashes.txt  initgroups.cache  passwd.cache  sid.cache
tests/sssd-sources/: README.md
tests/sssd-sources/head/: VERSION  compat.h  mmap_cache.h  murmurhash3.c
