[package]
name = "sssd-mc"
version = "0.1.0"
edition = "2021"
rust-version = "1.71"
description = "Read-only parser and inspector for SSSD memory cache files"
license = "GPL-3.0-or-later"

[dependencies]
clap = { version = "4", features = ["derive"] }
memmap2 = "0.9"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
